# IOTCC

./: .gitignore  KDEKube.md  README.md  gradle.properties  nplus.md
KDEP/: CMakeLists.txt  Main.qml  kirigamiwindow.cpp  kirigamiwindow.h  main.cpp
composeApp/: Main.kt  MainActivity.kt  Mongodb.kt  build.gradle.kts
composeApp/src/androidMain/kotlin/org/example/project/: Color.kt  Connections.kt  DetailScreen.kt  ListScreen.kt  MainActivity.kt  MongoDBConnection.kt  MongoMenu.kt  Mongodb.kt  theme.kt
composeApp/src/commonMain/kotlin/org/example/project/: App.kt  MongoMenu.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
server/src/main/kotlin/org/example/project/: Administration.kt  Application.kt  CommandSchema.kt  Databases.kt  Frameworks.kt  HTTP.kt  MongoUserDataSource.kt  PodSettings.kt  Routing.kt  Security.kt  Serialization.kt  Task.kt  Templating.kt  UserDataSource.kt  UsersSchema.kt
server/src/test/kotlin/org/example/project/: ApplicationTest.kt
shared/: build.gradle.kts
shared/src/androidTest/java/com/example/jvmtest/: ExampleInstrumentedTest.java
shared/src/commonMain/kotlin/org/example/project/: Greeting.kt  (+1 more)
shared/src/main/: AndroidManifest.xml
shared/src/main/res/layout/: activity_java_connector.xml  content_java_connector.xml
shared/src/main/res/menu/: menu_java_connector.xml
shared/src/main/res/navigation/: nav_graph.xml
shared/src/main/res/values/: strings.xml  themes.xml
shared/src/main/res/values-night/: themes.xml
shared/src/main/res/values-v23/: themes.xml
(+8 files in other folders)
